--- a/app/components/photo-gallery/swiper/correct-swiper.css
+++ b/app/components/photo-gallery/swiper/correct-swiper.css
@@ -1,3 +1,7 @@
 .yarl__container, .yarl__thumbnails_container {
     background-color: rgba(0, 0, 0, 0.95);
 }
+
+.swiper-pagination-bullet-active {
+    background-color: #000;
+}
