--- a/app/components/houses/houses.module.css
+++ b/app/components/houses/houses.module.css
@@ -4,3 +4,11 @@
     gap: 1rem;
     margin-top: 3rem;
 }
+
+@media (width <= 1024px) {
+    .wrapper {
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
+    }
+}
