--- a/app/components/about-us/advantages/advantages.module.css
+++ b/app/components/about-us/advantages/advantages.module.css
@@ -44,3 +44,36 @@
     font-size: 16px;
     line-height: 1.3;
 }
+
+@media (width <=1024px) {
+    .swiperWrapper {
+        margin-top: 2rem;
+    }
+
+    .item {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 2rem;
+        color: var(--text-color);
+        fill: var(--text-color);
+        border: 1px solid var(--text-color);
+        border-radius: 30px;
+        width: 100%;
+        aspect-ratio: 16/9;
+    }
+    .textWrapper {
+        text-align: center;
+    }
+    .iconWrapper {
+        width: 70px;
+        height: 70px;
+    }
+}
+
+@media (width <= 768px) {
+    .item {
+        gap: 0.5rem;
+    }
+}
