--- a/app/components/contacts/contacts.module.css
+++ b/app/components/contacts/contacts.module.css
@@ -2,6 +2,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 1.5rem;
+    margin-top: 2rem;
 }
 
 .map, .info {
@@ -22,6 +23,7 @@
     align-items: start;
     width: 100%;
     height: 100%;
+    gap: 2rem;
     padding: 1.25rem 1.75rem;
     border: 1px solid #CBCBCB;
 }
@@ -72,4 +74,20 @@
 .mapLink {
     display: flex;
     gap: 2.25rem;
+}
+
+@media (width <= 1024px) {
+    .contacts {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+    }
+
+    .map, .info {
+        aspect-ratio: inherit;
+    }
+
+    .map {
+        height: 300px;
+    }
 }
