--- a/app/components/main/main.module.css
+++ b/app/components/main/main.module.css
@@ -3,10 +3,15 @@
     height: 100vh;
 }
 
+.mask {
+    overflow: hidden;
+    width: 100%;
+    height: 97vh;
+    mask: url('/sprites/mask/main.svg') center center / cover repeat;
+}
+
 .image {
     width: 100%;
-    height: 97%;
-    mask-image: url('/sprites/mask/1440.svg');
-    mask-size: contain;
+    height: 100%;
     object-fit: cover;
 }
