--- a/app/globals.css
+++ b/app/globals.css
@@ -25,9 +25,11 @@
 .container {
     width: min(100%, 1440px);
     margin-inline: auto;
+    padding-inline: 1.25rem;
 }
 
 .containerText {
+    padding-inline: 1.25rem;
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
@@ -44,4 +46,14 @@
     font-size: 48px;
     font-weight: 700;
     color: var(--primary-color);
+}
+
+@media (width <= 1024px) {
+    .title {
+        font-size: 36px;
+    }
+    
+    .wrapper {
+        gap: 5rem;
+    }
 }
