--- a/app/components/contacts/contacts.module.css
+++ b/app/components/contacts/contacts.module.css
@@ -2,7 +2,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 1.5rem;
-    margin-top: 2rem;
+    margin-block: 2rem;
 }
 
 .map, .info {
