add modal in action house page

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,6 +16,10 @@
     font-family: 'PTSans';
 }
 
+button, input {
+    outline: none;
+}
+
 .wrapper {
     display: flex;
     flex-direction: column;
