--- a/app/components/houses/houses.module.css
+++ b/app/components/houses/houses.module.css
@@ -5,6 +5,10 @@
     margin-top: 3rem;
 }
 
+.container {
+    margin-top: -2rem;
+}
+
 @media (width <= 1024px) {
     .wrapper {
         display: flex;
