--- a/app/(pages)/booking/page.module.css
+++ b/app/(pages)/booking/page.module.css
@@ -1,3 +1,9 @@
 .container {
-    margin-top: 150px;
+    margin-top: 130px;
+}
+
+@media (width <= 1024px) {
+    .container {
+        margin-top: 80px;
+    }
 }
