--- a/app/globals.css
+++ b/app/globals.css
@@ -16,7 +16,8 @@
     font-family: 'PTSans';
 }
 
-button, input {
+button,
+input {
     outline: none;
 }
 
@@ -58,6 +59,27 @@ button, input {
     color: var(--primary-color);
 }
 
+.link {
+    cursor: pointer;
+    position: relative;
+}
+
+.link:after {
+    content: '';
+    position: absolute;
+    top: calc(100% + 3px);
+    inset-inline: 0;
+    display: block;
+    width: 100%;
+    height: 1px;
+    background-color:  rgba(0, 0, 0, 0.15);
+    transition: transform .25s;
+}
+
+.linkReverse:after {
+    background-color: rgba(255, 255, 255, 0.15);
+}
+
 .button {
     transition: transform .25s;
 }
@@ -70,11 +92,11 @@ button, input {
     transform: scale(1);
 }
 
-@media (width <= 1024px) {
+@media (width <=1024px) {
     .title {
         font-size: 36px;
     }
-    
+
     .wrapper {
         gap: 5rem;
     }
