add scroll to top

--- a/app/(pages)/comfort/[type]/page.module.css
+++ b/app/(pages)/comfort/[type]/page.module.css
@@ -20,3 +20,14 @@
 .gallery {
     margin-block: 3rem;
 }
+
+.title {
+    display: flex;
+    flex-direction: column;
+}
+
+.title > span {
+    margin-top: -.5rem;
+    font-size: 20px;
+    font-weight: normal;
+}
