--- a/app/(pages)/comfort/[type]/page.module.css
+++ b/app/(pages)/comfort/[type]/page.module.css
@@ -31,3 +31,9 @@
     font-size: 20px;
     font-weight: normal;
 }
+
+@media (width <= 1024px) {
+    .info {
+        margin-top: 12rem;
+    }
+}
