--- a/app/components/main/booking/booking.module.css
+++ b/app/components/main/booking/booking.module.css
@@ -1,8 +1,8 @@
 .container {
-    border-radius: 30px;
+    border-radius: 8px;
     position: absolute;
     background-color: rgba(0, 0, 0, 0.1);
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 5px 10px -5px rgba(0, 0, 0, 0.1);
     bottom: 70px;
     left: 0;
     right: 0;
@@ -14,9 +14,45 @@
     position: absolute;
 }
 
+.logoContainer {
+    position: absolute;
+    bottom: 25%;
+    left: 50%;
+    width: 300px;
+    aspect-ratio: 1/1;
+    padding: 3rem;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+    background-color: rgba(255, 255, 255, 0.9);
+    border-radius: 50%;
+    z-index: 2;
+}
+
+.logoWrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    aspect-ratio: 1/1;
+    fill: var(--primary-color);
+    color: var(--primary-color);
+}
+
+.logo {
+    width: 100%;
+}
+
+.title {
+    font-family: 'Philosopher';
+    font-size: 24px;
+}
+
 @media (width <= 1024px) {
     .container {
-        bottom: 250px;
+        bottom: 115px;
         height: 288px;
     }
 }
