--- a/app/components/reviews/review/review.module.css
+++ b/app/components/reviews/review/review.module.css
@@ -40,3 +40,11 @@
     font-size: 16px;
     color: #969696;
 }
+
+@media (width <= 425px) {
+    .review {
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+    }
+}
