--- a/app/components/swiper/correct-swiper.css
+++ b/app/components/swiper/correct-swiper.css
@@ -1,3 +1,7 @@
 .swiper-pagination-bullet-active {
     background-color: #000;
 }
+
+/* .swiper {
+    mask-image: linear-gradient(90deg, transparent 0%, rgba(0,0,0,1) 5%, rgba(0,0,0,1) 95%, transparent 100%);
+} */
