--- a/app/globals.css
+++ b/app/globals.css
@@ -24,7 +24,10 @@ input {
 .wrapper {
     display: flex;
     flex-direction: column;
-    gap: 7rem;
+}
+
+.wrapper > section {
+    padding-top: 7rem;
 }
 
 .container {
@@ -59,12 +62,12 @@ input {
     color: var(--primary-color);
 }
 
-.link {
+.mylink {
     cursor: pointer;
     position: relative;
 }
 
-.link:after {
+.mylink:after {
     content: '';
     position: absolute;
     top: calc(100% + 3px);
@@ -97,7 +100,7 @@ input {
         font-size: 36px;
     }
 
-    .wrapper {
-        gap: 5rem;
+    .wrapper > section {
+        padding-top: 5rem;
     }
 }
