--- a/app/(pages)/house/actions/actions.module.css
+++ b/app/(pages)/house/actions/actions.module.css
@@ -6,7 +6,7 @@
 
 .button {
     font-size: 20px;
-    border: 1px solid var(--secondary-accent);
+    border: 1px solid rgba(137, 146, 84, 0.4);
     border-radius: 30px;
     color: var(--secondary-accent);
     padding: .5rem 1.25rem;
