--- a/app/components/advantages/advantages.module.css
+++ b/app/components/advantages/advantages.module.css
@@ -48,20 +48,22 @@
 @media (width <=1024px) {
     .swiperWrapper {
         margin-top: 2rem;
+        align-items: stretch;
     }
 
     .item {
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: center;
+        justify-content: space-between;
         gap: 2rem;
-        color: var(--text-color);
-        fill: var(--text-color);
-        border: 1px solid var(--text-color);
+        color: #fff;
+        fill: #fff;
+        /* border: 1px solid var(--text-color); */
         border-radius: 30px;
         width: 100%;
-        aspect-ratio: 16/9;
+        background-color: var(--secondary-accent);
+        /* aspect-ratio: 16/9; */
     }
     .textWrapper {
         text-align: center;
