--- a/app/components/main/main.module.css
+++ b/app/components/main/main.module.css
@@ -15,3 +15,32 @@
     height: 100%;
     object-fit: cover;
 }
+
+.logoContainer {
+    position: absolute;
+    top: 100px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    z-index: 2;
+}
+
+.logoWrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    fill: #fff;
+    color: #fff;
+}
+
+.logo {
+    width: 100%;
+}
+
+.title {
+    font-family: 'Philosopher';
+    font-size: 24px;
+}
