--- a/app/components/modal/modal.module.css
+++ b/app/components/modal/modal.module.css
@@ -2,12 +2,13 @@
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    min-height: 100dvh;
     display: flex;
     justify-content: center;
     align-items: center;
     z-index: 10000;
+    overflow: scroll;
 }
 
 .backdrop {
@@ -22,7 +23,7 @@
     background-color: white;
     padding: 2.5rem;
     margin: 1rem;
-    border-radius: 16px;
+    border-radius: 30px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
 }
 
@@ -33,8 +34,8 @@
     align-items: center;
     justify-content: center;
     position: absolute;
-    top: 10px;
-    right: 10px;
+    top: 20px;
+    right: 20px;
     background-color: transparent;
     border: none;
     cursor: pointer;
