--- a/app/components/reviews/review/review.module.css
+++ b/app/components/reviews/review/review.module.css
@@ -1,6 +1,8 @@
 .slide {
+    position: relative;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
     gap: 0.75rem;
     border-radius: 30px;
     width: 100%;
@@ -14,8 +16,36 @@
     font-size: 24px;
 }
 
+.descriptionContainer {
+    position: relative;
+}
+
 .description {
     font-size: 20px;
+    overflow: hidden;
+}
+
+.hider {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 50px;
+    background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%);
+}
+
+.button {
+    font-size: 20px;
+    max-width: fit-content;
+    border: 1px solid rgba(137, 146, 84, 0.4);
+    border-radius: 30px;
+    color: var(--secondary-accent);
+    padding: .5rem 1.25rem;
+    align-self: center;
+}
+
+.closed {
+    height: 150px;
 }
 
 .review {
@@ -46,5 +76,24 @@
         display: flex;
         flex-direction: column;
         align-items: start;
+    }
+}
+
+@media (width <= 600px) {
+    .title {
+        font-size: 16px;
+    }
+    .description {
+        font-size: 14px;
+    }
+    .slide {
+        padding-inline: 15px;
+        gap: 5px;
+    }
+    .date {
+        font-size: 12px;
+    }
+    .button {
+        font-size: 14px;
     }
 }
