--- a/app/(pages)/house/actions/actions.module.css
+++ b/app/(pages)/house/actions/actions.module.css
@@ -10,10 +10,15 @@
     border-radius: 30px;
     color: var(--secondary-accent);
     padding: .5rem 1.25rem;
+    max-width: fit-content;
 }
 
 .title {
     font-size: 24px;
+}
+
+.content p {
+    margin-bottom: 20px;
 }
 
 .modalContent {
@@ -27,7 +32,26 @@
     line-height: 1.3;
 }
 
+.list {
+    list-style-type: disc;
+    padding-left: 1.5rem;
+}
+
 .numberList {
     list-style-type: decimal;
     padding-left: 1.5rem;
+}
+
+.list li, .numberList li {
+    margin-bottom: 10px;
+}
+
+@media (width <= 600px) {
+    .buttons {
+        flex-direction: column;
+        gap: 10px;
+    }
+    .button {
+        font-size: 16px;
+    }
 }
