--- a/app/(pages)/house/advantages/advantages.module.css
+++ b/app/(pages)/house/advantages/advantages.module.css
@@ -12,8 +12,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: start;
-    gap: .5rem;
+    justify-content: space-between;
+    /* gap: .5rem; */
     text-align: center;
     padding: 1rem;
     line-height: 1.25;
@@ -29,35 +29,50 @@
 
 .iconWrapper > svg {
     height: 100%;
+    max-width: 130px;
 }
 
 .swiperWrapper {
     margin-top: 3rem;
 }
 
-@media (width <= 1024px) {
-    .item {
-        display: flex;
-        align-items: center;
-        gap: 1.5rem;
-        justify-content: center;
-        border: 1px solid var(--secondary-accent);
-        border-radius: 30px;
-        aspect-ratio: 16/9;
-    }
-    .iconWrapper {
-        height: 100px;
-    }
-    .title {
-        font-size: 20px;
-    }
-}
-
 @media (width <= 768px) {
+    .advantages {
+        grid-template-columns: 1fr 1fr;
+        margin-inline: auto;
+        max-width: 70%;
+    }
+    .item {
+        aspect-ratio: 1/1;
+        border-radius: 0;
+        max-width: 100%;
+    }
     .iconWrapper {
         height: 60px;
     }
     .title {
         font-size: 16px;
+    }
+}
+
+@media (width <= 550px) {
+    .advantages {
+        max-width: 80%;
+    }
+}
+
+@media (width <= 450px) {
+    .advantages {
+        max-width: 100%;
+    }
+}
+
+@media (width <= 450px) {
+    .iconWrapper > svg {
+        height: 100%;
+        max-width: 100px;
+    }
+    .title {
+        font-size: 12px;
     }
 }
