--- a/app/components/advantages/advantages.module.css
+++ b/app/components/advantages/advantages.module.css
@@ -1,16 +1,16 @@
 .advantages {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
     margin-top: 3rem;
-    display: flex;
-    flex-wrap: wrap;
     border: 1px solid var(--secondary-accent);
+    overflow: hidden;
 }
 
 .item {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    display: grid;
+    align-content: space-between;
     padding: 1.5rem;
-    width: 20%;
+    width: 100%;
     fill: var(--text-color);
     color: var(--text-color);
     aspect-ratio: 1/1;
@@ -45,37 +45,53 @@
     line-height: 1.2;
 }
 
-@media (width <=1024px) {
-    .swiperWrapper {
-        margin-top: 2rem;
-        align-items: stretch;
-    }
-
-    .item {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-between;
-        gap: 2rem;
-        color: #fff;
-        fill: #fff;
-        /* border: 1px solid var(--text-color); */
-        border-radius: 30px;
-        width: 100%;
-        background-color: var(--secondary-accent);
-        /* aspect-ratio: 16/9; */
-    }
-    .textWrapper {
-        text-align: center;
-    }
-    .iconWrapper {
-        width: 70px;
-        height: 70px;
+@media (width <= 1350px) {
+    .advantages {
+        grid-template-columns: 1fr 1fr 1fr;
+        width: 70%;
+        margin-inline: auto;
     }
 }
 
-@media (width <= 768px) {
+@media (width < 1280px) {
+    .advantages {
+        width: 80%;
+    }
+}
+
+@media (width < 1024px) {
+    .advantages {
+        width: 100%;
+    }
+}
+
+@media (width < 850px) {
+    .swiperWrapper {
+        margin-top: 2rem;
+        width: 70%;
+        margin-inline: auto;
+    }
+
     .item {
-        gap: 0.5rem;
+        color: #fff;
+        fill: #fff;
+        aspect-ratio: 4/3;
+        border-radius: 30px;
+        background-color: var(--secondary-accent);
+    }
+}
+
+@media (width < 768px) {
+    .swiperWrapper {
+        width: 100%;
+    }
+}
+
+@media (width < 520px) {
+    .item {
+        aspect-ratio: 1/1;
+    }
+    .title {
+        font-size: 20px;
     }
 }
