--- a/app/components/swiper/swiper.module.css
+++ b/app/components/swiper/swiper.module.css
@@ -89,9 +89,8 @@
     left: 0;
     width: 8%;
     height: 100%;
-    background-color: red;
     z-index: 10;
-    background: linear-gradient(90deg, rgba(255,255,255,1) 0%, transparent 95%);
+    background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%);
 }
 
 .transparentRight {
@@ -100,17 +99,16 @@
     right: 0;
     width: 8%;
     height: 100%;
-    background-color: red;
     z-index: 10;
-    background: linear-gradient(90deg, transparent 0%, rgba(255,255,255,1) 95%);
+    background: linear-gradient(-90deg, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%);
 }
 
 .transparentLeft.gallery {
-    background: linear-gradient(90deg, rgba(0,0,0,1) 0%, transparent 95%);
+    background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
 }
 
 .transparentRight.gallery {
-    background: linear-gradient(90deg, transparent 0%, rgba(0, 0, 0, 0.9) 95%);
+    background: linear-gradient(-90deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
 }
 
 @media (width <=768px) {
