--- a/app/(pages)/house/advantages/advantages.module.css
+++ b/app/(pages)/house/advantages/advantages.module.css
@@ -72,7 +72,13 @@
         height: 100%;
         max-width: 100px;
     }
+}
+
+@media (width <= 350px) {
     .title {
-        font-size: 12px;
+        font-size: 14px;
+    }
+    .item {
+        aspect-ratio: 1/1.3;
     }
 }
