--- a/app/components/header/burger-menu/burger-menu.module.css
+++ b/app/components/header/burger-menu/burger-menu.module.css
@@ -42,11 +42,16 @@
     width: 25vw;
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.7);
-    display: flex;
-    flex-direction: column;
     transform: translateX(-100%);
     transition: transform .35s;
     z-index: 999999;
+}
+
+.links {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    overflow: auto;
 }
 
 .menu.active {
