--- a/app/components/modal/modal.module.css
+++ b/app/components/modal/modal.module.css
@@ -2,13 +2,12 @@
     position: fixed;
     top: 0;
     left: 0;
-    width: 100vw;
-    min-height: 100dvh;
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     z-index: 10000;
-    overflow: scroll;
 }
 
 .backdrop {
@@ -23,7 +22,9 @@
     background-color: white;
     padding: 2.5rem;
     margin: 1rem;
-    border-radius: 30px;
+    overflow: auto;
+    max-height: calc(100dvh - 2rem);
+    border-radius: 16px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
 }
 
@@ -34,8 +35,8 @@
     align-items: center;
     justify-content: center;
     position: absolute;
-    top: 20px;
-    right: 20px;
+    top: 10px;
+    right: 10px;
     background-color: transparent;
     border: none;
     cursor: pointer;
