edit vw header %

--- a/app/components/header/burger-menu/burger-menu.module.css
+++ b/app/components/header/burger-menu/burger-menu.module.css
@@ -85,12 +85,12 @@
 
 @media (width <= 1024px) {
     .menu {
-        width: 40vw;
+        width: 40%;
     }
 }
 
 @media (width <= 768px) {
     .menu {
-        width: 100vw;
+        width: 100%;
     }   
 }
