--- a/app/components/header/burger-menu/burger-menu.module.css
+++ b/app/components/header/burger-menu/burger-menu.module.css
@@ -78,13 +78,13 @@
     padding: 1rem 1rem 1rem 3rem;
 }
 
-@media (width <= 1024px) {
+@media (max-width: 1024px) {
     .menu {
         width: 40vw;
     }
 }
 
-@media (width <= 768px) {
+@media (max-width: 768px) {
     .menu {
         width: 100vw;
     }   
