--- a/app/components/houses/houses.module.css
+++ b/app/components/houses/houses.module.css
@@ -9,7 +9,7 @@
     margin-top: -2rem;
 }
 
-@media (width <= 1024px) {
+@media (max-width: 1024px) {
     .wrapper {
         display: flex;
         flex-direction: column;
