--- a/app/(pages)/booking/page.module.css
+++ b/app/(pages)/booking/page.module.css
@@ -2,7 +2,16 @@
     margin-top: 130px;
 }
 
-@media (width <= 1024px) {
+.notWork {
+    width: 100%;
+    height: calc(100vh - 75px);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 24px;
+}
+
+@media (max-width: 1024px) {
     .container {
         margin-top: 80px;
     }
