--- a/app/components/reviews/review/review.module.css
+++ b/app/components/reviews/review/review.module.css
@@ -77,7 +77,7 @@
     color: #969696;
 }
 
-@media (width <= 425px) {
+@media (max-width: 425px) {
     .review {
         display: flex;
         flex-direction: column;
@@ -85,7 +85,7 @@
     }
 }
 
-@media (width <= 600px) {
+@media (max-width: 600px) {
     .title {
         font-size: 16px;
     }
