add yandex metrika

--- a/app/components/main/main.module.css
+++ b/app/components/main/main.module.css
@@ -45,3 +45,13 @@
     font-family: 'Philosopher';
     font-size: 24px;
 }
+
+.legacy {
+    margin-bottom: 4rem;
+}
+
+@media (max-width: 1024px) {
+    .main {
+        margin-bottom: 9rem;
+    }
+}
