--- a/app/(pages)/house/[house]/page.module.css
+++ b/app/(pages)/house/[house]/page.module.css
@@ -1,5 +1,5 @@
 .house {
-    margin-top: 4rem;
+    padding-top: 6rem;
 }
 
 .info {
@@ -7,12 +7,12 @@
     display: flex;
     align-items: start;
     justify-content: space-between;
-    gap: 1.25rem;
 }
 
 .price {
     min-width: 200px;
     display: flex;
+    margin-block: 1.25rem;
     justify-content: center;
     align-items: center;
     flex-direction: column;
@@ -34,14 +34,11 @@
     margin-block: 3rem;
 }
 
-@media (width <= 1024px) {
+@media (max-width: 1024px) {
     .info {
         flex-direction: column;
     }
     .price {
         min-width: 100%;
-    }
-    .house {
-        margin-top: 12rem;
     }
 }
