--- a/app/components/contacts/contacts.module.css
+++ b/app/components/contacts/contacts.module.css
@@ -93,10 +93,12 @@
     .contacts {
         display: flex;
         flex-direction: column-reverse;
+        gap: inherit;
     }
 
     .map {
         height: 350px;
+        margin-top: 1.5rem;
     }
 }
 
