--- a/app/(pages)/house/[house]/page.module.css
+++ b/app/(pages)/house/[house]/page.module.css
@@ -1,5 +1,5 @@
 .house {
-    padding-top: 6rem;
+    padding-top: 2rem;
 }
 
 .info {
@@ -12,7 +12,8 @@
 .price {
     min-width: 200px;
     display: flex;
-    margin-block: 1.25rem;
+    margin-top: 1.25rem;
+    margin-bottom: 1.25rem;
     justify-content: center;
     align-items: center;
     flex-direction: column;
