--- a/app/components/main/main.module.css
+++ b/app/components/main/main.module.css
@@ -7,7 +7,7 @@
     overflow: hidden;
     width: 100%;
     height: 95vh;
-    mask: url('/sprites/mask/main.svg') center center / cover repeat;
+    -webkit-mask: url('/sprites/mask/main.svg') center center / cover repeat;
 }
 
 .image {
