--- a/app/components/separator/separator.module.css
+++ b/app/components/separator/separator.module.css
@@ -5,8 +5,9 @@
 }
 
 .mask {
-    mask-image: url('/sprites/mask/horse.svg');
-    mask-size: 100% 100%;
+    -webkit-mask-image: url('/sprites/mask/horse.svg');
+    -webkit-mask-size: 100% 100%;
     margin-top: 1.5rem;
     margin-bottom: 1.5rem;
+    overflow: hidden;
 }
