--- a/app/components/footer/footer.module.css
+++ b/app/components/footer/footer.module.css
@@ -2,9 +2,16 @@
     display: flex;
     padding-inline: 1.25rem;
     height: 75px;
+    margin-top: 4rem;
 }
 
 .text {
     font-size: 20px;
     color: #5F6368;
+}
+
+@media (max-width: 1024px) {
+    .footer {
+        margin-top: 2rem;
+    }
 }
