--- a/app/(pages)/house/[house]/page.module.css
+++ b/app/(pages)/house/[house]/page.module.css
@@ -1,5 +1,5 @@
 .house {
-    padding-top: 2rem;
+    padding-top: 4.5rem;
 }
 
 .info {
@@ -31,16 +31,17 @@
     font-size: 16px;
 }
 
-.gallery {
-    margin-top: 3rem;
-    margin-bottom: 3rem;
-}
-
 @media (max-width: 1024px) {
     .info {
         flex-direction: column;
     }
+
     .price {
+        margin-top: 1.75rem;
         min-width: 100%;
+    }
+
+    .house {
+        padding-top: 3.5rem;
     }
 }
