--- a/app/(pages)/house/actions/actions.module.css
+++ b/app/(pages)/house/actions/actions.module.css
@@ -1,7 +1,6 @@
 .buttons {
     display: flex;
-    gap: 1.25rem;
-    margin-top: 1.25rem;
+    margin-top: .75rem;
 }
 
 .button {
@@ -11,6 +10,11 @@
     color: var(--secondary-accent);
     padding: .5rem 1.25rem;
     max-width: fit-content;
+    margin-right: 1.25rem;
+}
+
+.button:last-child {
+    margin-right: 0;
 }
 
 .title {
@@ -49,9 +53,14 @@
 @media (width <= 600px) {
     .buttons {
         flex-direction: column;
-        gap: 10px;
+        margin-top: inherit;
     }
     .button {
         font-size: 16px;
+        margin-right: inherit;
+        margin-bottom: .5rem;
+    }
+    .button:last-child {
+        margin-bottom: inherit;
     }
 }
