--- a/app/(pages)/house/advantages/advantages.module.css
+++ b/app/(pages)/house/advantages/advantages.module.css
@@ -1,5 +1,5 @@
 .advantages {
-    margin-top: 4rem;
+    margin-top: 3rem;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     border: 1px solid var(--secondary-accent);
@@ -9,11 +9,11 @@
 }
 
 .item {
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    /* gap: .5rem; */
     text-align: center;
     padding: 1rem;
     line-height: 1.25;
@@ -27,7 +27,7 @@
     height: 60px;
 }
 
-.iconWrapper > svg {
+.iconWrapper>svg {
     height: 100%;
     max-width: 130px;
 }
@@ -36,20 +36,48 @@
     margin-top: 3rem;
 }
 
+.additionalInfoWrapper {
+    cursor: pointer;
+    padding: .75rem;
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+.titleModal {
+    font-size: 24px;
+}
+
+.additionalInfo {
+    width: 25px;
+    height: 25px;
+    border: 1px solid var(--secondary-accent);
+    border-radius: 50%;
+}
+
+.additionalInfoIcon {
+    width: 100%;
+    height: 100%;
+    fill: var(--secondary-accent);
+}
+
 @media (max-width: 768px) {
     .advantages {
         grid-template-columns: 1fr 1fr;
         margin-inline: auto;
         max-width: 70%;
+        margin-top: 2rem;
     }
+
     .item {
-        aspect-ratio: 1/1;
         border-radius: 0;
         max-width: 100%;
     }
+
     .iconWrapper {
         height: 60px;
     }
+
     .title {
         font-size: 16px;
     }
@@ -68,7 +96,7 @@
 }
 
 @media (max-width: 450px) {
-    .iconWrapper > svg {
+    .iconWrapper>svg {
         height: 100%;
         max-width: 100px;
     }
@@ -77,8 +105,5 @@
 @media (max-width: 350px) {
     .title {
         font-size: 14px;
-    }
-    .item {
-        aspect-ratio: 1/1.3;
     }
 }
