--- a/app/components/contacts/contacts.module.css
+++ b/app/components/contacts/contacts.module.css
@@ -1,10 +1,5 @@
 .container {
-    margin-top: -4rem;
-    margin-bottom: 4rem;
-}
-
-.container > h2 {
-    margin-bottom: 2rem;
+    margin-top: 5rem;
 }
 
 .contacts {
@@ -96,6 +91,9 @@
 }
 
 @media (max-width: 1024px) {
+    .container {
+        margin-top: 2rem;
+    }
     .contacts {
         display: flex;
         flex-direction: column-reverse;
