--- a/app/components/houses/house-item/house-item.module.css
+++ b/app/components/houses/house-item/house-item.module.css
@@ -25,6 +25,15 @@
     font-size: 32px;
 }
 
+@media (max-width: 1024px) {
+    .item {
+        margin-bottom: .75rem;
+    }
+    .item:last-child {
+        margin-bottom: 0;
+    }
+}
+
 @media (orientation: portrait) and (max-width: 600px) {
     .item {
         aspect-ratio: 2/3;
