--- a/app/components/modal/modal.module.css
+++ b/app/components/modal/modal.module.css
@@ -8,12 +8,12 @@
     justify-content: center;
     align-items: center;
     z-index: 10000;
-    overflow: scroll;
 }
 
 .backdrop {
     position: absolute;
     inset: 0;
+    cursor: pointer;
     background-color: rgba(0, 0, 0, 0.5);
 }
 
