--- a/app/components/separator/separator.module.css
+++ b/app/components/separator/separator.module.css
@@ -1,13 +1,22 @@
+.container {
+    margin-top: 5rem;
+}
+
 .image {
     width: 100%;
-    height: 100%;
+    height: 70vh;
     object-fit: cover;
 }
 
 .mask {
-    -webkit-mask-image: url('/sprites/mask/horse.svg');
-    -webkit-mask-size: 100% 100%;
+    -webkit-mask: url('/sprites/mask/horse.svg') center center / cover repeat;
     margin-top: 1.5rem;
     margin-bottom: 1.5rem;
     overflow: hidden;
+}
+
+@media (max-width: 1024px) {
+    .container {
+        margin-top: 2rem;
+    }
 }
