--- a/fonts/PT-Sans/PT-sans.css
+++ b/fonts/PT-Sans/PT-sans.css
@@ -1,17 +1,23 @@
 @font-face {
 	font-family: 'PTSans';
 	src:
+		local('PTSans Regular'),
+		local('PTSans-Regular'),
 		url('pt-sans_regular.woff2') format('woff2'),
 		url('pt-sans_regular.woff') format('woff');
 	font-weight: 400;
 	font-style: normal;
+	font-display: swap;
 }
 
 @font-face {
 	font-family: 'PTSans';
 	src:
-		url('pt-sans_bold.woff2') format('woff2'),
+		local('PTSans Bold'),
+		local('PTSans-Bold'),
+		url('pt-sans_bold.woff2') format('woff2')
 		url('pt-sans_bold.woff') format('woff');
 	font-weight: 700;
 	font-style: normal;
+	font-display: swap;
 }
