--- a/app/components/advantages/advantages.module.css
+++ b/app/components/advantages/advantages.module.css
@@ -34,10 +34,10 @@
 }
 
 .title {
-    font-family: 'Philosopher';
     font-weight: 700;
     font-size: 24px;
     line-height: 1.3;
+    font-weight: normal;
 }
 
 .description {
