--- a/app/components/main/main.module.css
+++ b/app/components/main/main.module.css
@@ -1,3 +1,22 @@
+.billetContainer {
+    width: fit-content;
+    border-radius: 30px;
+    position: absolute;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0 5px 10px -5px rgba(0, 0, 0, 0.1);
+    bottom: 30px;
+    left: 0;
+    right: 0;
+    margin-inline: auto;
+    padding: 1em 3.5em;
+    font-size: 1.5rem;
+    color: var(--secondary-accent);
+}
+
+.billetContainer p span {
+    font-weight: bold;
+}
+
 .main {
     width: 100%;
     height: 100vh;
@@ -8,6 +27,7 @@
     width: 100%;
     height: 95vh;
     -webkit-mask: url('/sprites/mask/main.svg') center center / cover repeat;
+    mask: url('/sprites/mask/main.svg') center center / cover repeat;
 }
 
 .image {
@@ -42,7 +62,6 @@
 }
 
 .title {
-    font-family: 'Philosopher';
     font-size: 24px;
 }
 
@@ -56,5 +75,16 @@
     }
     .legacy {
         margin-bottom: inherit;
+    }
+    .billetContainer {
+        font-size: 1rem;
+        padding: .7em 1.5em;
+        border-radius: 8px;
+    }
+}
+
+@media (max-width: 475px) {
+    .billetContainer {
+        margin-inline: 1rem;
     }
 }
