--- a/app/components/main/main.module.css
+++ b/app/components/main/main.module.css
@@ -8,7 +8,7 @@
     left: 0;
     right: 0;
     margin-inline: auto;
-    padding: 1em 3.5em;
+    padding: 1.25em 4em;
     font-size: 1.5rem;
     color: var(--secondary-accent);
 }
@@ -18,6 +18,7 @@
 }
 
 .main {
+    position: relative;
     width: 100%;
     height: 100vh;
 }
