--- a/app/(pages)/house/advantages/advantages.module.css
+++ b/app/(pages)/house/advantages/advantages.module.css
@@ -2,6 +2,7 @@
     margin-top: 3rem;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(2, 1fr);
     border: 1px solid var(--secondary-accent);
     gap: 1px;
     background-color: var(--secondary-accent);
@@ -13,7 +14,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     text-align: center;
     padding: 1rem;
     line-height: 1.25;
