--- a/app/components/main/main.module.css
+++ b/app/components/main/main.module.css
@@ -74,13 +74,14 @@
     .main {
         margin-bottom: 9rem;
     }
-    .legacy {
+    .unseason, .legacy {
         margin-bottom: inherit;
     }
     .billetContainer {
         font-size: 1rem;
         padding: .7em 1.5em;
         border-radius: 8px;
+        text-align: center;
     }
 }
 
