--- a/app/(pages)/house/actions/actions.module.css
+++ b/app/(pages)/house/actions/actions.module.css
@@ -18,7 +18,13 @@
 }
 
 .title {
+    line-height: 1;
     font-size: 24px;
+}
+
+.content {
+    margin-top: 1rem;
+    line-height: 1;
 }
 
 .content p {
