--- a/app/(pages)/house/advantages/advantages.module.css
+++ b/app/(pages)/house/advantages/advantages.module.css
@@ -47,6 +47,7 @@
 
 .titleModal {
     font-size: 24px;
+    line-height: 1;
 }
 
 .additionalInfo {
@@ -54,6 +55,11 @@
     height: 25px;
     border: 1px solid var(--secondary-accent);
     border-radius: 50%;
+}
+
+.content {
+    line-height: 1;
+    margin-top: 1rem;
 }
 
 .additionalInfoIcon {
