--- a/app/components/houses/houses.module.css
+++ b/app/components/houses/houses.module.css
@@ -2,6 +2,10 @@
     margin-top: 5rem;
 }
 
+.container p {
+    font-family: sans-serif;
+}
+
 .wrapper {
     display: grid;
     grid-template-columns: 1fr 1fr;
